# time_tracker

./: #gui.glade#  .gitignore  Cargo.toml  README.md  TODO.md  gui.glade  gui.glade~  log_file.rson
electron_ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  rust_worker.js  style.css
electron_ui/src/: current_time.js  index.html  main.js  preload.js  renderer.js  rust_worker.js
rust_time_lib/: Cargo.toml  README.md  TODO.md  build.sh
rust_time_lib/src/: file_utils.rs  label_values.rs  lib.rs  time_obj_helper.rs  time_object.rs  time_utils.rs
src/: file_utils.rs  glade_gui_construct.rs  gui_construct.rs  main.rs  manual_gui_construct.rs  message.rs  my_menu_bar.rs  time_object.rs  time_utils.rs  times.rs
